Fix OCR language suggestions